# openfisca-setup-builder

./: .gitignore  .shellcheckrc  CHANGELOG.md  README.md  Taskfile.yaml  bashdep.sh  build.sh  pyproject.toml
.github/workflows/: default.yaml
src/first_time_setup/: checks.sh  envvars.sh  main.sh  messages.sh  setup.sh  status.sh
src/first_time_setup/utils/: boolean.sh  colours.sh  file.sh  string.sh  subshell.sh  url.sh
tests/first_time_setup/: test_checks.sh  test_setup.sh
tests/first_time_setup/e2e/: test_e2e.sh
tests/first_time_setup/unit/: test_status.sh
tests/first_time_setup/unit/utils/: test_file.sh  test_string.sh  test_url.sh
tests/first_time_setup/utils/: test_boolean.sh  test_string.sh
