[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "openfisca-setup-builder"
version = "0.0.0"
description = ""
authors = [ "OpenFisca Team <contact@openfisca.org>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
codespell = "^2.3.0"
mdformat-footnote = "^0.1.1"
mdformat-frontmatter = "^2.0.8"
mdformat-gfm = "^0.3.6"
mdformat-gfm-alerts = "^1.0.1"
pyproject-fmt = "^2.4.3"
shellcheck-py = "^0.10.0.1"
shfmt-py = "^3.7.0.1"
yamllint = "^1.35.1"
